Fixed the issues with the main content having a jump in the width below the sidebar

--- a/src/documents/styles/stylesheet.css
+++ b/src/documents/styles/stylesheet.css
@@ -135,7 +135,7 @@ a:hover {
 
 .inner {
   position: relative;
-  width: 940px;
+  width: 1030px;
   margin: 0 auto;
 }
 
@@ -149,7 +149,6 @@ a:hover {
   padding-left: 20px;
   min-height: 504px;
   float: right;
-  background: transparent url(../images/sidebar-bg.jpg) 0 0 no-repeat;
   font-size: 12px;
   line-height: 1.3;
 }
@@ -195,7 +194,7 @@ a:hover {
 
 #main-content {
   width: 690px;
-  padding: 70px 50px 50px 50px;
+  padding: 0px 50px 50px 50px;
 }
 
 #main-content img {
